# vote-counter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
VoteCounter/: CMakeLists.txt  ProjectSettings.hpp  SnapshotModel.cpp  SnapshotModel.hpp  VoteCounter.ui  VoteCounterShell.cpp  VoteCounterShell.hpp  main.cpp  resources.qrc
cmake/: QArtmRelease.cmake
lib/: CMakeLists.txt  JsonSavior.hpp  MouseLogic.cpp  MouseLogic.hpp  QMetaUtilities.cpp  QMetaUtilities.hpp  QOpenCV.cpp  QOpenCV.hpp  ScopedDetention.hpp  static.h
resources/icons/: VoteCounter.icns
